Show Hidden button in Dopesheet and graph editor doesn't quite work #28826

Closed
opened 2011-10-07 05:10:34 +02:00 by bassam kurdali · 4 comments
Member

%%%This could be due to two bugs:

In the attached .blend are 3 bones, helpfully named 'visible' 'hidden_with_H' 'hidden_layer'

In the Dope sheet:

all three bones appear regardless of the 'ghost' icon being clicked or not. (it has no affect on the bone level). The same is the case for the action editor.

In the Graph editor:

ghost button kinda works: when show_hidden is off, only the visible bone is visible, but! turning it on reveals 'hidden_layer' but fails to reveal 'hidden_with_H'.

attaching .blend.

2.6.35-30-generic #59-Ubuntu SMP Tue Aug 30 19:00:03 UTC 2011 x86_64 GNU/Linux
intel quadcore cpu/nvidia gpu
revision 40831%%%

%%%This could be due to two bugs: In the attached .blend are 3 bones, helpfully named 'visible' 'hidden_with_H' 'hidden_layer' In the Dope sheet: all three bones appear regardless of the 'ghost' icon being clicked or not. (it has no affect on the bone level). The same is the case for the action editor. In the Graph editor: ghost button kinda works: when show_hidden is off, only the visible bone is visible, but! turning it on reveals 'hidden_layer' but fails to reveal 'hidden_with_H'. attaching .blend. 2.6.35-30-generic #59-Ubuntu SMP Tue Aug 30 19:00:03 UTC 2011 x86_64 GNU/Linux intel quadcore cpu/nvidia gpu revision 40831%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Aha... I seemed to have tied this in to the selected-only option, so this filtering only occurs if that is enabled.%%%

%%%Aha... I seemed to have tied this in to the selected-only option, so this filtering only occurs if that is enabled.%%%
Member

%%%Finally got around to checking out why an earlier attempt to fix this failed.

Fixed in svn. (I think ;) %%%

%%%Finally got around to checking out why an earlier attempt to fix this failed. Fixed in svn. (I think ;) %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28826
No description provided.