Bugfix [#28826] Show Hidden button in Dopesheet and Graph Editor doesn't quite work

Show Hidden was handled by the same filtering function as Only Selected, but the
filters were being tested incorrectly (or to be precise, only Only Selected was
being considered).

This meant that it was only possible to show F-Curves belonging to hidden data
if that data happened to be selected first.